<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.ProfileFragment">


        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/id_string"
            app:layout_constraintStart_toStartOf="@+id/profile_image_view"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view" />

        <TextView
            android:id="@+id/profile_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/doctor_name"
            app:layout_constraintStart_toStartOf="@+id/id_text_view"
            app:layout_constraintTop_toBottomOf="@+id/id_text_view" />

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tel_with_args_string"
            app:layout_constraintStart_toStartOf="@+id/profile_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_text_view" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_with_args"
            app:layout_constraintStart_toStartOf="@+id/phone_number_text"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_text" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addr_with_args"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>