<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.takecare.ui.HomeFragment"
        android:label="Home" >
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/doctorsFragment"
        android:name="com.example.takecare.ui.DoctorsFragment"
        android:label="Doctors" >
        <action
            android:id="@+id/action_doctorsFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
        <action
            android:id="@+id/action_doctorsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/myAppointmentFragment"
        android:name="com.example.takecare.ui.MyAppointmentFragment"
        android:label="MyAppointment" >
        <action
            android:id="@+id/action_myAppointmentFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.takecare.ui.SignInFragment"
        android:label="@string/sign_in_string"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_createAccountFragment"
            app:destination="@id/createAccountFragment" />
        <action
            android:id="@+id/action_signInFragment_to_doctorsFragment"
            app:destination="@id/doctorsFragment"
            app:popUpTo="@id/doctorsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="doctor"
            app:argType="com.example.takecare.model.Doctor"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.example.takecare.ui.CreateAccountFragment"
        android:label="@string/request_registration"
        tools:layout="@layout/fragment_create_account">
        <action
            android:id="@+id/action_createAccountFragment_to_doctorsFragment"
            app:destination="@id/doctorsFragment"
            app:popUpTo="@id/doctorsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="doctor_create"
            app:argType="com.example.takecare.model.Doctor"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.takecare.ui.ProfileFragment"
        android:label="@string/profile_string" >
        <argument
            android:name="patient"
            app:argType="com.example.takecare.model.Patient"
            app:nullable="true" />
    </fragment>
</navigation>